--- a/styles/style.css
+++ b/styles/style.css
@@ -18,9 +18,10 @@ h1{
 img{
     display: block;
     height: auto;
-    width: 350px;
+    width: 400px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
 }
 
 ul{
